Fix value update issue with InstantPicker; add configurable quick select buttons in trace dialog